service added and fixed

--- a/CardsFullStack/ClientApp/src/app/app.component.html
+++ b/CardsFullStack/ClientApp/src/app/app.component.html
@@ -1,6 +1,16 @@
 <body>
   <app-nav-menu></app-nav-menu>
   <div class="container">
+
+    <button (click)="getDeck()">Get Deck</button>
+
+    <button></button>
+
+
+
+
+    <h1>The stuff below came with the VS project</h1>
+    <hr />
     <router-outlet></router-outlet>
   </div>
 </body>
